finish doc update
