# controller/usersController.go
@@ -22,11 +22,14 @@ func NewUsersController(service *service.UsersService) *UsersController {
 // Returns a list of Users. Response is paginated and requestor may filter by user's name.
 // @Description Retrieves all users paginated.
 // @Summary Retrieves all users paginated.
-// @Tags Authenticated Routes
+// @Tags Private Routes
 // @Produce json
 // @Param name query string false "User Name"
+// @Param page query number false "Page Number"
+// @Param limit query string false "Page Limit"
+// @Param Authorization header string true "Bearer <Token>"
 // @Success 200 {array} response.UsersListResponse
-// @Router /api/users [get]
+// @Router /users [get]
 func (contr UsersController) GetUsers(c *fiber.Ctx) error {
 	name := c.Query("name", "")
 	page, _ := strconv.Atoi(c.Query("page", "1"))
@@ -40,11 +43,12 @@ func (contr UsersController) GetUsers(c *fiber.Ctx) error {
 // Retrieves user based on its Id
 // @Description Retrieves user based on its Id
 // @Summary Retrieves user based on its Id
-// @Tags Authenticated Routes
+// @Tags Private Routes
 // @Produce json
 // @Param id path integer true "User ID"
+// @Param Authorization header string true "Bearer <Token>"
 // @Success 200 {object} response.UserResponse
-// @Router /api/users/{id} [get]
+// @Router /users/{id} [get]
 func (contr UsersController) GetUserById(c *fiber.Ctx) error {
 	userId, error := strconv.ParseUint(c.Params("id"), 10, 64)
 	if error != nil {
@@ -66,11 +70,12 @@ func (contr UsersController) GetUserById(c *fiber.Ctx) error {
 // Update a User based on Id info present JWT token
 // @Description Update a User based on Id info present JWT token
 // @Summary Update a User based on Id info present JWT token
-// @Tags Authenticated Routes
+// @Tags Private Routes
 // @Produce json
 // @Param data body request.UserUpdateRequest true "User Update Data"
+// @Param Authorization header string true "Bearer <Token>"
 // @Success 200 {object} response.UserResponse
-// @Router /api/users [put]
+// @Router /users [put]
 func (contr UsersController) UpdateUser(c *fiber.Ctx) error {
 	userId, error := utils.GetTokenInfo(c)
 	if error != nil {
@@ -99,10 +104,11 @@ func (contr UsersController) UpdateUser(c *fiber.Ctx) error {
 // Delete a User based on Id info present JWT token
 // @Description Delete a User based on Id info present JWT token
 // @Summary Delete a User based on Id info present JWT token
-// @Tags Authenticated Routes
+// @Tags Private Routes
 // @Produce json
+// @Param Authorization header string true "Bearer <Token>"
 // @Success 204
-// @Router /api/users [delete]
+// @Router /users [delete]
 func (contr UsersController) DeleteUser(c *fiber.Ctx) error {
 	userId, error := utils.GetTokenInfo(c)
 	if error != nil {
