# docs/swagger.json
@@ -10,14 +10,14 @@
     },
     "basePath": "/api",
     "paths": {
-        "/api/users": {
+        "/users": {
             "get": {
                 "description": "Retrieves all users paginated.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Authenticated Routes"
+                    "Private Routes"
                 ],
                 "summary": "Retrieves all users paginated.",
                 "parameters": [
@@ -26,6 +26,25 @@
                         "description": "User Name",
                         "name": "name",
                         "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "description": "Page Number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Page Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003cToken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -46,7 +65,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authenticated Routes"
+                    "Private Routes"
                 ],
                 "summary": "Update a User based on Id info present JWT token",
                 "parameters": [
@@ -58,6 +77,13 @@
                         "schema": {
                             "$ref": "#/definitions/request.UserUpdateRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003cToken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -75,15 +101,24 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authenticated Routes"
+                    "Private Routes"
                 ],
                 "summary": "Delete a User based on Id info present JWT token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003cToken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "204": {}
                 }
             }
         },
-        "/api/users/auth": {
+        "/users/auth": {
             "post": {
                 "description": "Authenticate User Based on email/password Credentials",
                 "produces": [
@@ -114,7 +149,7 @@
                 }
             }
         },
-        "/api/users/register": {
+        "/users/register": {
             "post": {
                 "description": "Register a new User",
                 "produces": [
@@ -145,14 +180,14 @@
                 }
             }
         },
-        "/api/users/{id}": {
+        "/users/{id}": {
             "get": {
                 "description": "Retrieves user based on its Id",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Authenticated Routes"
+                    "Private Routes"
                 ],
                 "summary": "Retrieves user based on its Id",
                 "parameters": [
@@ -161,6 +196,13 @@
                         "description": "User ID",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003cToken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
